--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
 </head>
 
 <body>
-	<h1>SpaceWalkers</h1>
+  <div class="container">
+    <section class="navigation-container">
+        <h1 class="home-title">
+            SpaceWalkers
+        </h1>
  <!-- navigation code here -->
-  <nav>
-    <a href=''>Home</a>
-    <a href=''>About Us</a>
-    <a href=''>Blog</a>
-    <a href=''>Contact</a>
-    <a href=''>Sign In</a>
-  </nav>
+ <nav>
+  <a href="#">Home</a>
+  <a href="#">About Us</a>
+  <a href="#">Blog</a>
+  <a href="#">Contact</a>
+  <a href="#">Sign In</a>
+</nav>
 
   <div class="container home">
 
